what does open source mean to me?

--- a/_posts/2018-01-28-week01.md
+++ b/_posts/2018-01-28-week01.md
@@ -4,7 +4,9 @@ title: Week 1
 ---
 
 
-This text should be replaced by your first post. 
+### What comes to mind when I hear "open source?"
+To me, the term "open source" refers to software whose source code is publically available. Both definitions of "free" are embraced, meaning that the software has no monetery costs and everyone has the liberty to view and modify source code. I envision passionate communities at the heart of every open source project.
 
-The easiest way to make your first post is to edit this one. 
-Go into /_posts/ and update the 2018-01-28-week01.md file. 
+The greatest advantage of open source comes from the transparency and collaboration involved. The more minds there are contributing to a project, the more likely it is for at least one person to be able to tackle bugs and make the modifications needed to improve the software. More minds will also likely mean more ideas being bounced around, ideas that have the potential to greatly further improve the software. Because the source code is truly open, bug fixes and new ideas the get implemented are free to be viewed by everyone, allowing each member of the community to learn from each other.
+
+I mention the collaboration between members of the community as an advantage for open source software development, but this advantage only exists if the community members are able to organize themselves. If not, there are dire problems that may arise. If contributors are unable to agree on certain aspects of the project, development of the project may stagnate. The more people a project attracts, the more likely it may be for disagreements to occur. This makes it necessary to establish standards that all community members are expected to follow. A community that lacks in collaboration is hardly a community at all.
