--- a/_posts/2018-01-28-week01.md
+++ b/_posts/2018-01-28-week01.md
@@ -4,9 +4,26 @@ title: Week 1
 ---
 
 
-### What comes to mind when I hear "open source?"
+### What Comes to Mind When I Hear "Open Source?"
 To me, the term "open source" refers to software whose source code is publically available. Both definitions of "free" are embraced, meaning that the software has no monetery costs and everyone has the liberty to view and modify source code. I envision passionate communities at the heart of every open source project.
 
 The greatest advantage of open source comes from the transparency and collaboration involved. The more minds there are contributing to a project, the more likely it is for at least one person to be able to tackle bugs and make the modifications needed to improve the software. More minds will also likely mean more ideas being bounced around, ideas that have the potential to greatly further improve the software. Because the source code is truly open, bug fixes and new ideas the get implemented are free to be viewed by everyone, allowing each member of the community to learn from each other.
 
 I mention the collaboration between members of the community as an advantage for open source software development, but this advantage only exists if the community members are able to organize themselves. If not, there are dire problems that may arise. If contributors are unable to agree on certain aspects of the project, development of the project may stagnate. The more people a project attracts, the more likely it may be for disagreements to occur. This makes it necessary to establish standards that all community members are expected to follow. A community that lacks in collaboration is hardly a community at all.
+
+### Four Open Source Projects I Use
+1. [Pokemon Showdown](https://github.com/Zarel/Pokemon-Showdown)
+
+    Pokemon is a popular video game that centers around collecting monsters called Pokemon and using them to battle other Pokemon. This open source project allows users to create teams and battle the teams of other users. I'm a huge fan of the Pokemon seres and this project provides a great way to have some fun and practice battle strategies. The alternative to this would be to buy the multiple video game products, which would be quite expensive and yet not as featureful as this project.
+    
+2. [Visual Studio Code](https://github.com/Microsoft/vscode)
+
+    VSC is the text editor I currently like to use. It's fast, lightweight, and highly customizable. It's nice to see a large company like Microsoft, known for proprietary products, make this product's source code available. Many alternatives exist, such as Atom, Vim, Sublime, and more.
+
+3. [OpenEmu](https://github.com/OpenEmu/OpenEmu)
+
+    OpenEmu allows for the emulation of retro gaming on macOS. I enjoy using it because of its pleasant and easy to use UI. It makes playing some of my childhood favorite games and other games I may have missed out on an absolute pleasure. The alternative to using this would be to buy retro gaming consoles, which can be challenging to find in the first place and if you do manage to find them, they will cost you quite a lot.
+
+4.  [React](https://github.com/facebook/react)
+
+    React is a popular JavaScript framework for creating user interfaces. I particularly like it because it's relatively easy to learn but can be quite powerful in creating modern web apps. Also, my experience in using React opens the door for me to try out [React Native](https://github.com/facebook/react-native), which I have not tried yet but I am intrigued by the potential of using JavaScript to create native mobile applications. Alternatives to React include Angular and Vue.
