questions for tom callaway

--- a/_posts/2018-01-28-week01.md
+++ b/_posts/2018-01-28-week01.md
@@ -27,3 +27,7 @@ I mention the collaboration between members of the community as an advantage for
 4.  [React](https://github.com/facebook/react)
 
     React is a popular JavaScript framework for creating user interfaces. I particularly like it because it's relatively easy to learn but can be quite powerful in creating modern web apps. Also, my experience in using React opens the door for me to try out [React Native](https://github.com/facebook/react-native), which I have not tried yet but I am intrigued by the potential of using JavaScript to create native mobile applications. Alternatives to React include Angular and Vue.
+    
+### Questions for Tom Callaway from Red Hat
+1. What companies does Red Hat compete with and what advantages does Red Hat offer over these companies so that enterprises are compelled to use Red Hat?
+2. What are the challenges that come with maintaining so many different free software projects?
