week 2 blog post

--- a/_posts/2018-02-04-week02.md
+++ b/_posts/2018-02-04-week02.md
@@ -4,7 +4,18 @@ title: Week 2
 ---
 
 
-This text should be replaced by your second post. 
+### The Cathedral Model vs The Bazaar Model
+The cathedral model of software development describes a process in which the development of a project is kept confined within a group of specifically assigned developers. The source code is only available to a select few and thus they are responsible for the entirety of building, testing, and debugging of the product.
 
-The easiest way to make your second post is to edit this one. 
-Go into /_posts/ and update the 2018-02-04-week02.md file. 
+The bazaar model of software development makes the source code available to all. Developers and users may initially be presented with an unfinished or unrefined product but the product is constantly evolving. Developers make changes frequently, and particularly these changes can come from any developer willing to make a change rather than a centralized team of developers.
+
+Personally, I think I would be more comfortable following the cathedral model. The centralization of development provides a sense of order that would make it easier to define goals and work towards those goals. The bazaar model seems like it could get quite hectic and lacking in direction. In my personal experience, I've seen that products that are developed following the cathedral model tend to be more polished and work better than their alternatives.
+
+### Two Takeaways from _The Cathedral and the Bazaar_
+#### "8. Given a large enough beta-tester and co-developer base, almost every problem will be characterized quickly and the fix obvious to someone."
+
+This idea is one of the most important reasons why open source software development is viable. Projects will often have developers from various backgrounds working on them. With such a diverse pool of technical skills, it becomes highly likely that at least one person will be able to identify and resolve a technical issue. This likelihood increases as the number of developers working on the project increases.
+
+#### "18. To solve an interesting problem, start by finding a problem that is interesting to you."
+
+I like this notion because it encourages developers to find projects that personally appeal to them. Once someone finds a problem that they find interesting, they will be more willing to invest time and effort into solving it and perhaps find enjoyment in it.
