wrote about wiki contribution

--- a/_posts/2018-02-11-week03.md
+++ b/_posts/2018-02-11-week03.md
@@ -4,3 +4,8 @@ title: Week 3
 ---
 
 ### My Contribution to Wikipedia
+The article that I chose to contribute to is the one about [purple squirrels](https://en.wikipedia.org/wiki/Purple_squirrel_(animal)). I chose this article in particular because the topic is obscure and the article is short, indicating that it has the most potential for editing. Also, I think squirrels are interesting and purple squirrels are even more interesting than normal squirrels.
+
+I contributed to the article by fixing a dead link. One of the external links led to a 404 error, which means that most likely the website changed or deleted the page that was being referenced. To fix this, I used https://web.archive.org/ to find a snapshot of the page before it was taken down and I modified the link to send users to the snapshot I found.
+
+My contributions can be found [here](https://en.wikipedia.org/wiki/Special:Contributions/Nootnootspagoot).
