talked about pull request

--- a/_posts/2018-02-18-week04.md
+++ b/_posts/2018-02-18-week04.md
@@ -2,3 +2,7 @@
 layout: post
 title: Week 4
 ---
+
+### My Pull Request
+The issue that I claimed has been closed, so I have not been assigned an issue yet. I've claimed another issue and am awaiting to be assigned before I can make any pull request.
+
