wrote about triaging

--- a/_posts/2018-02-18-week04.md
+++ b/_posts/2018-02-18-week04.md
@@ -6,3 +6,13 @@ title: Week 4
 ### My Pull Request
 The issue that I claimed has been closed, so I have not been assigned an issue yet. I've claimed another issue and am awaiting to be assigned before I can make any pull request.
 
+### My Code Triage Experience
+The projects that I signed up to receive emails for are as follows:
+1. [youtube-dl](https://github.com/rg3/youtube-dl)
+2. [Let's Encrypt](https://github.com/certbot/certbot)
+3. [React Native](https://github.com/facebook/react-native)
+4. [React](https://github.com/facebook/react)
+
+One issue I looked at is [this one](https://github.com/facebook/react/issues/1881) from the React project. This issue was actually opened in 2014 and has a long chain of comments. It deals with the support of !important tags in styles. When looking at it, I get the idea that it must be quite a controversial topic because it's an old issue but it's still open today and people are still commenting on it. I suppose the issue is still open because it's relatively low priority and people are not able to agree on how to move forward with it.
+
+Another issue I looked at is [this one](https://github.com/rg3/youtube-dl/issues/9790) from the youtube-dl project. I see that it was opened in 2016 and is still open despite not having any comments. Perhaps it is because rather than being an actual issue, this post asks for the implementation of a new feature. I get the idea that this project has a lot of issues like this one because at the moment there are 1,844 issues open and many of them do not have any comments.
