--- a/_posts/2018-02-25-week05.md
+++ b/_posts/2018-02-25-week05.md
@@ -2,3 +2,6 @@
 layout: post
 title: Week 5
 ---
+
+### What I Look for When Selecting an Open Source Project to Work on
+One thing I consider when choosing what project to work on is how interested I am in the project. I want to contribute to projects that I genuinely think are fun, exciting or impactful. After all, I'm going to be making these contribtutions during my own free time--so I don't want these contributions to be considered chores or as if I could be spending my time doing something else. The aforementioned feelings are avoided if I am able to work on a project that I am passionate about. 
