wrote what I hope to learn

--- a/_posts/2018-02-25-week05.md
+++ b/_posts/2018-02-25-week05.md
@@ -8,3 +8,6 @@ One thing I consider when choosing what project to work on is how interested I a
 
 ### What I am Able to Offer to a Project
 I have experience in full-stack web development. On the front-end this entails HTML, CSS, and JavaScript. On the back-end I have experience in Python and Node. I can also work in C and Java.
+
+### What I Hope to Learn from Working on an Open Source Project
+I hope to strengthen my already existing skillset while also learning technologies that I have not worked with before. In addition, I would like to get more experience working in a collaborative environment and become more comfortable using Git.
