wrote about worries in contributing to projects

--- a/_posts/2018-02-25-week05.md
+++ b/_posts/2018-02-25-week05.md
@@ -11,3 +11,6 @@ I have experience in full-stack web development. On the front-end this entails H
 
 ### What I Hope to Learn from Working on an Open Source Project
 I hope to strengthen my already existing skillset while also learning technologies that I have not worked with before. In addition, I would like to get more experience working in a collaborative environment and become more comfortable using Git.
+
+### What Worries me When I Think About and Plan to Work on an Open Source Project
+I suppose my biggest concern when contributing to a project is my capability to make a contribution. Even issues that are labeled "easy" may appear daunting to inexperienced contributors such as myself. I believe that this worry will eventually fade as I learn more about the projects I choose to work on and make more contributions.
