wrote questions for Aurelia Moser

--- a/_posts/2018-02-25-week05.md
+++ b/_posts/2018-02-25-week05.md
@@ -14,3 +14,8 @@ I hope to strengthen my already existing skillset while also learning technologi
 
 ### What Worries me When I Think About and Plan to Work on an Open Source Project
 I suppose my biggest concern when contributing to a project is my capability to make a contribution. Even issues that are labeled "easy" may appear daunting to inexperienced contributors such as myself. I believe that this worry will eventually fade as I learn more about the projects I choose to work on and make more contributions.
+
+### Questions for Aurelia Moser
+1. When it comes to how open source development works, what are the similarities and differences found between people who work on open source projects for a living and people who contribute to open source projects in their free time?
+
+2. What has your experience been in resolving or mitigating contentions that arise between people during open source development?
