wrote about my contributions

--- a/_posts/2018-02-25-week05.md
+++ b/_posts/2018-02-25-week05.md
@@ -19,3 +19,8 @@ I suppose my biggest concern when contributing to a project is my capability to 
 1. When it comes to how open source development works, what are the similarities and differences found between people who work on open source projects for a living and people who contribute to open source projects in their free time?
 
 2. What has your experience been in resolving or mitigating contentions that arise between people during open source development?
+
+### My Contributions Made this Week
+I claimed an [issue](https://github.com/joannakl/cs480_s18/issues/85) recently for the class website. I'm awaiting to be formally assigned before I attempt to fix it.
+
+I closed an [issue](https://github.com/joannakl/cs480_s18/issues/24) that I reported earlier in the semester because it got labeled with a wontfix tag.
