wrote about team strengths and weaknesses

--- a/_posts/2018-03-04-week06.md
+++ b/_posts/2018-03-04-week06.md
@@ -2,3 +2,10 @@
 layout: post
 title: Week 6
 ---
+
+### Team Assessment and Plan
+
+#### Strengths and Weaknesses of Our Team
+Most of us have taken the Applied Internet Technology course at NYU so we have experience in JavaScript, HTML, and CSS. Most of us also have experience in Python.
+
+Our biggest weakness is our collective lack of experience in contributing to large open source projects. Coming up with contributions that we can make and navigating through the logistics of contributing may prove to be a daunting task at first but I believe this weakness will dissipate with time and experience.
