wrote about contributions for the week

--- a/_posts/2018-03-04-week06.md
+++ b/_posts/2018-03-04-week06.md
@@ -9,3 +9,15 @@ title: Week 6
 Most of us have taken the Applied Internet Technology course at NYU so we have experience in JavaScript, HTML, and CSS. Most of us also have experience in Python.
 
 Our biggest weakness is our collective lack of experience in contributing to large open source projects. Coming up with contributions that we can make and navigating through the logistics of contributing may prove to be a daunting task at first but I believe this weakness will dissipate with time and experience.
+
+#### Our Meeting Times
+
+TBD.
+
+#### Milestones
+
+TBD.
+
+### My Contributions Made this Week
+
+I submitted a [pull request](https://github.com/joannakl/cs480_s18/pull/91) that closes an issue for the class website. The poster of the issue has commented on the pull request and approved it, so now all that remains is for the pull request to be merged. 
