wrote which events im going to

--- a/_posts/2018-03-04-week06.md
+++ b/_posts/2018-03-04-week06.md
@@ -18,6 +18,9 @@ TBD.
 
 TBD.
 
+### Which Open Data Week Events I Plan on Attending
+I plan on going to NYC Open Data Week @ NYU and The State of Open Data on School Bullying and Harassment.
+
 ### My Contributions Made this Week
 
 I submitted a [pull request](https://github.com/joannakl/cs480_s18/pull/91) that closes an issue for the class website. The poster of the issue has commented on the pull request and approved it, so now all that remains is for the pull request to be merged. 
