wrote about open data week at nyu

--- a/_posts/2018-03-11-week07.md
+++ b/_posts/2018-03-11-week07.md
@@ -2,3 +2,10 @@
 layout: post
 title: Week 7
 ---
+
+### NYC Open Data Week @ NYU
+I had an opportunity to attend the Data Week event held at NYU this past week. There was a panel that consisted of representatives from different fields in which open data is relevant, such as academia, law, and government. It was quite interesting to get a veriety of opinions on open data and how open data is applicable to many different use cases.
+
+I especially liked how the panelists stressed that data being public is not enough for it to be truly open. Data must not only be public, but it must also be accessible and understandable. I admire the notion of not settling when it comes to data and demanding the best that we can get. I also found it fascinating how seemingly beinign data, such as the NYC taxi driver data, can be analyzed to such extreme measures as idtentifying the religious orientations of taxi drivers. This highlights the true power that data has and how open data is not necessarily good.
+
+![Me at NYC Open Data Week @ NYU](https://lh3.googleusercontent.com/jlMfml7Nnr99mLUV5Tssuj7r-u7qXUWi1KHZMqkX2-MwymuNjRmam16bYFIvsQoKn368vcDRXMWpFbSVbxx072vW9SHk2MNT-hkXoOsfyWxy7XpnakQOzROdfRn--6BJIpQbTDyWdpgDxkU-gpt6wdjoz-Vj2Yj_7kBR8efqRJJZuKnH9ytzXr762OGmZQcBcYKvJoVBP0LW1sblj8u5kdRHQTzgQn26bL17ppt3eHopIdRSKdVoBZ0U0TgZwVzfNBEdt9Vmf9LrzEeo6Z12-_DvskHt095GJvuK0bNGSIvPTAKuZwgdjKjv3hGZvhvfsIbzMLyP5LYInVbi6RPxUPLdz0vm7O-6k22wc7hkq-Flw2alUVncvoyP-27LyvDH64Gb4Zl8SWMJN7RR89Xfrea-UAEVNx5-sEhY-lgHRRpC1kOJkNJPKoZCbou6IyCteuhplVi9NItg_U0SM3yxcZx-zfW_SkfuU-srUe40Ses5jraZNeUNd4dDXlrvMertLBQXIM_EcV1zQcW5XXuq29PIQN6XJx6NH9oiKazKhwSkMGkF5A4Be8tdkT44AFCLwcqZE1Nwz_LnDKtU4KruIm7TkJQpwASZrBFR7Dk=w697-h929-no)
