wrote about two sigma event

--- a/_posts/2018-03-11-week07.md
+++ b/_posts/2018-03-11-week07.md
@@ -9,3 +9,10 @@ I had an opportunity to attend the Data Week event held at NYU this past week. T
 I especially liked how the panelists stressed that data being public is not enough for it to be truly open. Data must not only be public, but it must also be accessible and understandable. I admire the notion of not settling when it comes to data and demanding the best that we can get. I also found it fascinating how seemingly beinign data, such as the NYC taxi driver data, can be analyzed to such extreme measures as idtentifying the religious orientations of taxi drivers. This highlights the true power that data has and how open data is not necessarily good.
 
 ![Me at NYC Open Data Week @ NYU](https://lh3.googleusercontent.com/jlMfml7Nnr99mLUV5Tssuj7r-u7qXUWi1KHZMqkX2-MwymuNjRmam16bYFIvsQoKn368vcDRXMWpFbSVbxx072vW9SHk2MNT-hkXoOsfyWxy7XpnakQOzROdfRn--6BJIpQbTDyWdpgDxkU-gpt6wdjoz-Vj2Yj_7kBR8efqRJJZuKnH9ytzXr762OGmZQcBcYKvJoVBP0LW1sblj8u5kdRHQTzgQn26bL17ppt3eHopIdRSKdVoBZ0U0TgZwVzfNBEdt9Vmf9LrzEeo6Z12-_DvskHt095GJvuK0bNGSIvPTAKuZwgdjKjv3hGZvhvfsIbzMLyP5LYInVbi6RPxUPLdz0vm7O-6k22wc7hkq-Flw2alUVncvoyP-27LyvDH64Gb4Zl8SWMJN7RR89Xfrea-UAEVNx5-sEhY-lgHRRpC1kOJkNJPKoZCbou6IyCteuhplVi9NItg_U0SM3yxcZx-zfW_SkfuU-srUe40Ses5jraZNeUNd4dDXlrvMertLBQXIM_EcV1zQcW5XXuq29PIQN6XJx6NH9oiKazKhwSkMGkF5A4Be8tdkT44AFCLwcqZE1Nwz_LnDKtU4KruIm7TkJQpwASZrBFR7Dk=w697-h929-no)
+
+### The State of Open Data on School Bullying and Harrassment at Two Sigma
+Of all of the Open Data Week events, this is the one that I was most interested in. I'm intruiged by the idea of using open data to research a topic as impactful and prevalent as school bullying and harrassment. The event began with a presentation on how federal and local data was used to gain insight on the reports of school bullying, followed by a panel of speakers.
+
+I enjoyed how the presentation mapped together seemingly unrelated terms and obscure bits of data into cohesive and understandable data. It felt like putting together a puzzle or solving a mystery and made me appreciative of the work that gets put into creating this data. The presentation shed light on how data may conflict with other pieces of data, which is especially prevalent when data comes from different sources. My biggest takeaway from this event was that data may easily be corrupt. This was highlighted by the notion that schools may report inaccurate data to save face or governments may obscure data for their own purposes.  
+
+![Me at the Two Sigma event](https://lh3.googleusercontent.com/g_PQ4brGoJ6iqtLlX4SgnDyG7D9eZLAusOVLLB1HzgsJFSLBFFL2gHTLIMkxrrt72RcDYGrf4iAf7a8WwVviVB4jk6qdJ0LYDk8jhVSfc8pqEuwWZ40t-XGr3ZWXo2G8Z6Xf93MP7CvGFx8xPOBIH3fBQzP_xxo3qu9ZLdEAy21nUo2s9yIYNaQBNYxa8nP27791BqVMibRfm2x9iZ6NY6nmMv2BRGdAs42tyYsg5CJTvK6_6FqEcRNekKHbfHcVbIkRP0kMBW6wJwU7xWk1rcsk2jKWNadKLWnG9bBBkWS9d52sGDwoU6XXS50ghWwcMw_1JeJNMMBlp6DJu3aeRcF_8j2MnLcbO7lhNEfh5GsnAXP639jzWm8Srw6E-yrKIUDdaiv8RaeDxj6SU6XkbcSERWh90DME6s_frdxhsY4_d2xdUYBLdHa4bYh1A39C6CiMoEPqb5_09cymi6v7w6wlqeaypaU_YdOTD7AMNVX39dfaQq7YIfgjgHfE5wQCrvfaVYbYrKGNic598vHbMB7VWGrPKHbM_pOxz_aK5HuGGGHXonG-stjXyAREP2tO5-b0Z3_3g55EEE8wptBFumriecvbyIHHgh9wPf8=w697-h929-no)
