--- a/_posts/2018-03-25-week08.md
+++ b/_posts/2018-03-25-week08.md
@@ -2,3 +2,8 @@
 layout: post
 title: Week 8
 ---
+
+### Humanitarian Open Source Projects
+While not an outright humanitarian project, I believe [Wikipedia](https://www.wikipedia.org/) does embody some humanitarian aspects. The idea of having a reliable and fully accessible source of information on virtually any topic imaginable is one that can be considered humanitarian because it prevents ignorance and censorship. Even if people try to alter articles to fit their own agendas, they will likely be changed back by others to reflect factual information.
+
+Similarly, [Firefox](https://www.mozilla.org/en-US/firefox/) isn't an outright humanitarian project but it has some humanitarian ideals. Namely, Firefox values the privacy and security of consumers and combats against deceptive data collection.
