wrote about group progress

--- a/_posts/2018-03-25-week08.md
+++ b/_posts/2018-03-25-week08.md
@@ -7,3 +7,6 @@ title: Week 8
 While not an outright humanitarian project, I believe [Wikipedia](https://www.wikipedia.org/) does embody some humanitarian aspects. The idea of having a reliable and fully accessible source of information on virtually any topic imaginable is one that can be considered humanitarian because it prevents ignorance and censorship. Even if people try to alter articles to fit their own agendas, they will likely be changed back by others to reflect factual information.
 
 Similarly, [Firefox](https://www.mozilla.org/en-US/firefox/) isn't an outright humanitarian project but it has some humanitarian ideals. Namely, Firefox values the privacy and security of consumers and combats against deceptive data collection.
+
+### Group Project Progress
+So far, we have managed to set up our development environments and create milestones for ourselves. I have listed some potential issues we may be able to work on as well as some previously closed issues that are labeled "beginner-friendly" so that we may study them and their solutions. Our next steps are to create more milestones for ourselves as we get ready to choose an issue and work on its solution.
