--- a/_posts/2018-04-01-week09.md
+++ b/_posts/2018-04-01-week09.md
@@ -2,3 +2,10 @@
 layout: post
 title: Week 9
 ---
+
+### Questions for Danna Kelmer
+1. What is it like to work on both open source and proprietary software and what are the similarities and differences between the two?
+
+2. What role does open source software play in Google's products?
+
+3. What are your opinions regarding the media reports about Google's controversial approach to diversity? 
