wrote about group project progress

--- a/_posts/2018-04-01-week09.md
+++ b/_posts/2018-04-01-week09.md
@@ -9,3 +9,8 @@ title: Week 9
 2. What role does open source software play in Google's products?
 
 3. What are your opinions regarding the media reports about Google's controversial approach to diversity? 
+
+### Group Project Progress
+We have chosen an [issue](https://github.com/zulip/zulip/issues/8750) to work on and have officially claimed it. Our group met within the last week so we can work on the issue together. We were able to replicate the issue on our local machines. We also determined that the modifed information was being properly saved, but it was not automatically rerendering. In order to see the new information, we had to reload the page we were on. Since we realized that the information was being saved, we were able to determine that the issue must be regarding an AJAX GET request. Essentially, this GET request is what is supposed to happen, so we have to find out what's preventing it from happening.
+
+As an individual, I tried to find further information regarding the issue. I was able to find what specific functions were being called and in what order they execute. We can use this information to track the flow of data and see what is going on when an admin changes the topic of a message.
