wrote about google talk

--- a/_posts/2018-04-08-week10.md
+++ b/_posts/2018-04-08-week10.md
@@ -2,3 +2,8 @@
 layout: post
 title: Week 10
 ---
+
+### Google's Approach to Open Source
+I thought it was cool to see how a huge tech company like Google has a welcoming and appreciative approach towards open source software development. Despite having many products that are proprietary, Google has a surprisingly large amount of open source products as well. It made me curious about what factors determine whether or not Google open sources one of their products.
+
+Contributing to a Google-owned open source project seems a tad bit more convoluted than contributing to a regular open source project, especially with the differentiation between internal contributors and external contributors. Still, it's good to see influential tech companies like Google embrace open source and it would be nice to see other companies follow suit.
