wrote about group contributions

--- a/_posts/2018-04-08-week10.md
+++ b/_posts/2018-04-08-week10.md
@@ -7,3 +7,8 @@ title: Week 10
 I thought it was cool to see how a huge tech company like Google has a welcoming and appreciative approach towards open source software development. Despite having many products that are proprietary, Google has a surprisingly large amount of open source products as well. It made me curious about what factors determine whether or not Google open sources one of their products.
 
 Contributing to a Google-owned open source project seems a tad bit more convoluted than contributing to a regular open source project, especially with the differentiation between internal contributors and external contributors. Still, it's good to see influential tech companies like Google embrace open source and it would be nice to see other companies follow suit.
+
+### Group Project Progress
+The [issue](https://github.com/zulip/zulip/issues/8750) I commented on last week received a reply a couple of days ago. It pointed us towards a specific file that we can look at. Our next steps are to follow through on this comment and see if it helps us resolve the issue.
+
+While we were stuck on the previous issue, we claimed another [issue](https://github.com/zulip/zulip/issues/8547) to work on. I created a branch in our [group repository](https://github.com/nyu-ossd-s18/zulip/tree/issue-8547-make-reply-inactive) where we should work on this issue. I modified a couple of files so that when messages are retrieved, the code checks if the length of the list of messages is greater than 0. If it isn't greater than 0, than the "reply" button is rendered disabled. I think this branch is ready to be submitted as a pull request, but all of us need to confirm this fix first.
