wrote about codes of conduct

--- a/_posts/2018-04-08-week10.md
+++ b/_posts/2018-04-08-week10.md
@@ -12,3 +12,8 @@ Contributing to a Google-owned open source project seems a tad bit more convolut
 The [issue](https://github.com/zulip/zulip/issues/8750) I commented on last week received a reply a couple of days ago. It pointed us towards a specific file that we can look at. Our next steps are to follow through on this comment and see if it helps us resolve the issue.
 
 While we were stuck on the previous issue, we claimed another [issue](https://github.com/zulip/zulip/issues/8547) to work on. I created a branch in our [group repository](https://github.com/nyu-ossd-s18/zulip/tree/issue-8547-make-reply-inactive) where we should work on this issue. I modified a couple of files so that when messages are retrieved, the code checks if the length of the list of messages is greater than 0. If it isn't greater than 0, than the "reply" button is rendered disabled. I think this branch is ready to be submitted as a pull request, but all of us need to confirm this fix first.
+
+### Code of Conduct Documents
+I think the benefit of having a Code of Conduct for a project is that it fosters a sense of community and encourages participation from people of all backgrounds and skill levels. I know that as a beginner open source contributor, I feel better about projects that clearly establish that they are friendly to newcomers. It makes contributing less intimidating because I know that community members will respect me regardless of my skill level.
+
+Zulip has a code of conduct [here](http://zulip.readthedocs.io/en/latest/code-of-conduct.html).
