wrote about group project progress

--- a/_posts/2018-04-15-week11.md
+++ b/_posts/2018-04-15-week11.md
@@ -2,3 +2,6 @@
 layout: post
 title: Week 11
 ---
+
+### Group Project Progress
+I submitted a [pull request](https://github.com/zulip/zulip/pull/9047) this past week. The process for submitting a pull request for Zulip involves a number of steps, including providing a screenshot/GIF of the fixed issue and passing several automated tests. After my initial commits failed to pass a test, I updated the pull request with another commit that now passes all test cases. It is now awaiting review.
