wrote about group project progress

--- a/_posts/2018-04-22-week12.md
+++ b/_posts/2018-04-22-week12.md
@@ -2,3 +2,8 @@
 layout: post
 title: Week 12
 ---
+
+### Group Project Progress
+My [pull request](https://github.com/zulip/zulip/pull/9047) still remains open and I am at risk of being unassigned from the issue that this pull request closes due to lack of recent activity on it. I commented on the issue saying that I have a pull reuqest open that needs review before I can make any further changes.
+
+I helped a few group members in making progress in their issues by letting them know how to run tests and how to make commits and pull requests the way the Zulip docs intend us to.
