wrote about Zulip license

--- a/_posts/2018-04-22-week12.md
+++ b/_posts/2018-04-22-week12.md
@@ -7,3 +7,12 @@ title: Week 12
 My [pull request](https://github.com/zulip/zulip/pull/9047) still remains open and I am at risk of being unassigned from the issue that this pull request closes due to lack of recent activity on it. I commented on the issue saying that I have a pull reuqest open that needs review before I can make any further changes.
 
 I helped a few group members in making progress in their issues by letting them know how to run tests and how to make commits and pull requests the way the Zulip docs intend us to.
+
+### Zulip License
+Zulip is licensed under the [Apache license](https://github.com/zulip/zulip/blob/master/LICENSE).
+
+Under this license, users can use the project for commercial purposes, make modifications to the software, distribute both the original software and any modified forms, and use the software for private use.
+
+However, users cannot hold the owners of the project or license liable for any damages nor can users use their own trademarks.
+
+Under this license, users must include the original copyright, original license, a Notice file with possible additions to it, and a statement of any changes made to the software.
