wrote what i learned

--- a/_posts/2018-05-06-week14.md
+++ b/_posts/2018-05-06-week14.md
@@ -2,3 +2,10 @@
 layout: post
 title: Week 14
 ---
+
+### Course Reflection
+
+#### What I Learned
+I certainly learned a lot over the course of this semester. Before taking this course, the idea of contributing to open source projects was something I thought about but never acted on because I had no idea where to start. Now I feel like I am capable of looking for open source projects that I am interested in and joining their communities. 
+
+I grew more comfortable with Git and GitHub, especially when it comes to tracking/submitting issues and creating forks and pull requests. Working on Zulip with my classmates was also a valuable experience, as it was the first time I got involved in a large scale open source project and it made me interested in continuing to contribute to open source projects even after this course has ended.
