wrote what i would remove from course

--- a/_posts/2018-05-06-week14.md
+++ b/_posts/2018-05-06-week14.md
@@ -11,4 +11,9 @@ I certainly learned a lot over the course of this semester. Before taking this c
 I grew more comfortable with Git and GitHub, especially when it comes to tracking/submitting issues and creating forks and pull requests. Working on Zulip with my classmates was also a valuable experience, as it was the first time I got involved in a large scale open source project and it made me interested in continuing to contribute to open source projects even after this course has ended.
 
 #### What I Wish I had Learned
-I think it would have been beneficial to learn about some common testing and debugging tools and methods. 
+I think it would have been beneficial to learn about some common testing and debugging tools and methods.
+
+#### What I Would Remove from the Course
+I don't really feel like there was anything superfluous in the course, as everything provided some value for us. If I had to choose, it would probably be the weekly blog posts.
+
+
