wrote what i would add to course

--- a/_posts/2018-05-06-week14.md
+++ b/_posts/2018-05-06-week14.md
@@ -16,4 +16,5 @@ I think it would have been beneficial to learn about some common testing and deb
 #### What I Would Remove from the Course
 I don't really feel like there was anything superfluous in the course, as everything provided some value for us. If I had to choose, it would probably be the weekly blog posts.
 
-
+#### If I Could Add One Thing to the Course
+I would try to add more interesting guest speakers, especially guest speakers whose ideas differ between each other. The guest speakers this semester were great to have but I felt like there was a lot of repetitive things being said between all of them.
